# rlgdg

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml
data/ludii/: gamelist.txt  gamelist_concepts.txt
data/ludii/eval/: default.json
data/ludii/grpo/: test.json  train.json
data/ludii/prompts/: default.json
data/ludii/sft/: gamelist.txt  test.json  train.json
docker/: build.sh  exec.sh  run.sh
grammars/: ludii.lark
ludii_java/: manifest_concept.mf  manifest_eval.mf  manifest_expand.mf  manifest_ma.mf
ludii_java/src/: ComputeConcept.java  ComputeMultiAgents.java  EvalLudiiGame.java  ExtractExpand.java  multiagent_evalgame_config.json
recipes/ludii/grpo/: config_grpo.yaml
recipes/ludii/sft/: config_sft.yaml
scripts/: standard.sh
src/data_processing/: generate_concept.py  generate_eval_set.py  generate_gamelist.py  generate_grpo_train_set.py  generate_sft_train_set.py  grammar_utils.py  ludii_utils.py
src/ggdg/: aggregate_results.py  dataset.py  evaluate.py  flags.py  game_description_decoding.py  main.py  random_sampling.py  rule_decoding.py  structs.py  train_utils.py  utils.py
src/llms/: inference.py
src/llms/models/: gemma.py  gpt.py  hf_model.py  llm.py  utils.py
src/minEarley/: earley.py  earley_exceptions.py  earley_forest.py  main.py  parser.py  tree.py
src/rlgdg/: grpo.py  rewards.py  sft.py
