[project]
name = "rlgdg"
version = "0.1.0"
description = "RLGDG: reinforcement learning-based fine-tuning of LLMs for game description generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.43.0",
    "datasets>=3.2.0",
    "deepspeed==0.15.4",
    "einops>=0.8.0",
    "exrex>=0.12.0",
    "hf-transfer>=0.1.4",
    "huggingface-hub[cli]>=0.19.2,<1.0",
    "instructor>=1.9.0",
    "lark>=1.2.2",
    "latex2sympy2-extended>=1.0.6",
    "levenshtein>=0.27.1",
    "liger-kernel==0.5.2",
    "lighteval[math]",
    "math-verify==0.5.2",
    "nltk>=3.9.1",
    "packaging>=23.0",
    "peft>=0.14.0",
    "rouge>=1.0.1",
    "safetensors>=0.3.3",
    "sentencepiece>=0.1.99",
    "setuptools>=80.9.0",
    "torch==2.5.1+cu124",
    "tqdm>=4.67.1",
    "transformers==4.49.0",
    "trl==0.15.2",
    "vllm==0.7.2",
    "wandb>=0.19.1",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
lighteval = { git = "https://github.com/huggingface/lighteval.git", rev = "86f62259f105ae164f655e0b91c92a823a742724" }
torch = { index = "torch-cuda" }

[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.16.1",
    "nvitop>=1.5.1",
    "parameterized>=0.9.0",
    "pytest>=8.4.1",
    "ruff>=0.9.0",
]
flash-attn = [
    "flash-attn==2.7.4.post1"
]
